<resources>
    <string name="app_name">Calculadora</string>
    <string name="textExpressao" />
    <string name="textResultado" />
    <string name="Btn_xy">xY</string>
    <string name="Btn_sin">sin</string>
    <string name="btn_tan">tan</string>
    <string name="btn_raiz">√</string>
    <string name="btn_7">7</string>
    <string name="btn_6">6</string>
    <string name="btn_enviar">HIST.</string>
    <string name="btn_apagar">C</string>
    <string name="btn_multiplicar">X!</string>
    <string name="btn_divisao">➗</string>
    <string name="btn_2">2</string>
    <string name="btn_0">0</string>
    <string name="btn_ponto">.</string>
    <string name="btn_percentual">%</string>
    <string name="btn_multiplicacao">X</string>
    <string name="btn_subtracao">-</string>
    <string name="btn_adicao">+</string>
    <string name="btn_3">3</string>
    <string name="btn_resultado">=</string>
    <string name="btn_8">8</string>
    <string name="btn_1">1</string>
    <string name="btn_cos">cos</string>
    <string name="btn_9">9</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
</resources>
